# os_labs

./: update.cmd  update.sh
lab1/: CMakeLists.txt  build.cmd  build.sh
lab2/: CMakeLists.txt  build.cmd  build.sh  main.c  test_program.c
lab2/lib/: CMakeLists.txt  backgroundRunner.c  backgroundRunner.h
lab3/: CMakeLists.txt  build.cmd  build.sh  main.c  shared_mem.c
lab3/include/: shared_memory.h  utils.h
lab3/logs/: log.txt
lab3/src/: shared_memory.c  utils.c
lab4/: CMakeLists.txt  build.cmd  build.sh  device.c  temperature_logger.c
lab5/: CMakeLists.txt  build.sh  device.c  generate_data.py  main.c
lab5-client/: index.html  package-lock.json  package.json  server.js
lab5/db/: temp.db
lab5/include/: database.h  handlers.h  serialport.h
lab5/src/: database.c  handlers.c  serialport.c
lab6/: build.cmd  lab6.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
